# saas-analytics-dashboard

./: .pre-commit-config.yaml  Pipfile  README.md  db.sqlite3  pyproject.toml
.github/workflows/: lint-formatter.yaml
config/: settings.py
core/: admin.py  models.py
core/migrations/: 0001_initial.py
docs/decisions/: 0001-database-and-roles.md  0002-jwt-auth-bearer.md  0003-api-architecture.md
events/: admin.py  models.py
events/migrations/: 0001_initial.py
userauths/: admin.py  models.py
userauths/migrations/: 0001_initial.py  0002_user_username_alter_user_client_alter_user_email_and_more.py  0003_remove_user_username_alter_user_client.py  0004_alter_user_managers.py
