[project]
requires-python = ">=3.13"

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = [
    "migrations",
    "**/migrations/*",
]

[tool.ruff.lint]
select = ["E","W","F", "I", "B", "UP", "SIM", "DJ", "N"]

ignore = ["E203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true